---------------------------------------------------------------------

name:                      vellian
version:                   0.0.2
build-type:                Simple
cabal-version:             >= 1.10
category:                  Unknown
author:                    Daniel Cartwright
maintainer:                dcartwright@layer3com.com
license:                   BSD3
license-file:              LICENSE
homepage:                  https://github.com/chessai/vellian#readme
bug-reports:               https://github.com/chessai/vellian/issues
synopsis:                  A generator for different kinds of logs.
description:               A Haskell library for generating logs
                           from user specifications.
extra-source-files:        README.md
tested-with:               GHC == 8.0.2
                         , GHC == 8.2.1

---------------------------------------------------------------------

source-repository head
    type:                git
    branch:              master
    location:            https://github.com/chessai/vellian.git

---------------------------------------------------------------------

library
    hs-source-dirs:        src
    build-depends:         base       >= 4.9 && < 5.0
                         , star
    exposed-modules:       Vellian
                         , Fib
    default-language:      Haskell2010
    other-extensions:     

---------------------------------------------------------------------

